# financial-doc-review

./: .dockerignore  .gitignore  CLAUDE.MD  Dockerfile  README.md  portfolio.html  pyproject.toml  requirements.txt  start.sh
.claude/skills/git-commit/: SKILL.md
app/: main.py  ui.py
app/api/: review.py
app/schemas/: decision.py  document.py  ocr.py  quality.py
app/services/: ocr_service.py  quality_service.py  rule_engine.py  vlm_service.py
docs/: decision_rules.md  known_limitations.md  pipeline_analysis.md  problem_definition.md
portfolio/: index.html
reports/: perf_20260324_090418.json  perf_20260324_090418.md  perf_20260324_091128.json  perf_20260324_091128.md  perf_20260324_092732.json  perf_20260324_092732.md  perf_20260324_094121.json  perf_20260324_094121.md  perf_20260324_100554.json  perf_20260324_100554.md  perf_20260325_003520.json  perf_20260325_003520.md  perf_20260325_043834.json  perf_20260325_043834.md  summary.md  v1_baseline.md  v2_conservative_retake.md  v3_vlm_reread_restored.md  v4_name_postprocess.md  v5_vlm_model_comparison.md  v6_safe_pass_improvement.md
samples/: ground_truth.json
scripts/: dummy_response.py  eval_samples.py  generate_samples.py  labeling_ui.py  perf_test.py  test_ocr.py  test_ocr_service.py  test_pipeline.py
